trunk/Archive2/23/e5dc47d6c97a72/output
main.cpp: In function 'void f()':
main.cpp:5:24: error: conflicting declaration 'using type = '
     using type = int[t];
                        ^
main.cpp:4:26: note: previous declaration as 'using type = int [(t + 0)]'
     using type = int[t+0];
                          ^
