trunk/Archive2/23/e5dc47d6c97a72/main.cpp
template <unsigned t>
void f()
{  
    using type = int[t+0];
    using type = int[t];
}

int main() {}